# 2023-4e-suchy-slang

./: .gitignore  LICENSE  README.md  package.yaml  poster.slg  runtime.ll  sc  slang.cabal  slangc.cabal  stack.yaml
docs/: .gitignore  HC.tmTheme  hyphenation.tex  ieee-no-quotes.csl  literature.bib  main.tex  main.typ  obsah.typ  presentation.typ  slang-hi.yaml  titulnistrany.tex  titulnistrany.typ
docs/sections/: uvod.tex
examples/: arithmetic.slg  brainfk.slg  fizzbuzz.slg  multiples.slg  test-minimal.slg  test-pipelines.slg  test.slg
src/: Analyser.hs  Codegen.hs  Common.hs  Lexer.hs  Lexer.x  Main.hs  Parser.hs  Types.hs
