cabal-version:       2.2

name:                slang
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/gyarab/2023-4e-suchy-slang#readme
license:             MIT
license-file:        LICENSE
author:              Adam Suchý

executable slang
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
